--- a/RD3/Views/AlarmView.xaml
+++ b/RD3/Views/AlarmView.xaml
@@ -11,8 +11,8 @@
     xmlns:prism="http://prismlibrary.com/"
     xmlns:viewmodels="clr-namespace:RD3.ViewModels"
     d:DataContext="{d:DesignInstance Type=viewmodels:AlarmViewModel}"
-    d:DesignHeight="450"
-    d:DesignWidth="800"
+    d:DesignHeight="700"
+    d:DesignWidth="1350"
     Background="{StaticResource BackGroundBrush}"
     FontFamily="{StaticResource ENGFontFamily}"
     TextElement.FontSize="14"
@@ -34,20 +34,26 @@
                 <ColumnDefinition Width="auto" />
                 <ColumnDefinition Width="auto" />
                 <ColumnDefinition Width="auto" />
-                <ColumnDefinition Width="27" />
-                <ColumnDefinition Width="65.637" />
+                <ColumnDefinition Width="auto" />
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
             <hc:SearchBar
+                Name="txtSearch"
                 Width="240"
                 Height="30"
                 Margin="0,10,0,10"
                 HorizontalAlignment="Center"
                 hc:InfoElement.ShowClearButton="True"
-                Command="{Binding SearchCmd}"
-                CommandParameter="{Binding Text, RelativeSource={RelativeSource Self}}"
-                IsRealTime="True" />
+                IsRealTime="True"
+                SearchStarted="TxtSearch_SearchStarted">
+                <!--<hc:Interaction.Triggers>
+                    <hc:EventTrigger EventName="SearchStarted">
+                        <hc:EventToCommand Command="{Binding SearchCommand}" PassEventArgsToCommand="True" />
+                    </hc:EventTrigger>
+                </hc:Interaction.Triggers>-->
+            </hc:SearchBar>
             <hc:DateTimePicker
+                Name="dtpStart"
                 Grid.Column="1"
                 Width="200"
                 Height="30"
@@ -55,6 +61,7 @@
                 hc:InfoElement.Placeholder="{ex:Language Key='Start time'}"
                 hc:InfoElement.ShowClearButton="True" />
             <hc:DateTimePicker
+                Name="dtpEnd"
                 Grid.Column="2"
                 Width="200"
                 Height="30"
@@ -63,11 +70,11 @@
                 hc:InfoElement.ShowClearButton="True" />
             <Button
                 Grid.Column="3"
-                Grid.ColumnSpan="2"
                 Height="30"
                 HorizontalContentAlignment="Center"
                 hc:BorderElement.CornerRadius="{StaticResource DefaultCornerRadius}"
                 hc:IconElement.Geometry="{StaticResource GeometryFilter}"
+                Click="ButtonSearch_Click"
                 Content="{ex:Language Key='Filters'}"
                 FontSize="14" />
         </Grid>
