暂存 1.操作记录界面增加 2.解决搜索数据，分页控件总页数不刷新问题

--- a/RD3/Views/BatchView.xaml
+++ b/RD3/Views/BatchView.xaml
@@ -233,8 +233,17 @@
             Grid.Row="3"
             HorizontalAlignment="Right"
             VerticalAlignment="Center"
+            Background="Transparent"
+            DataCountPerPage="{Binding DataCountPerPage}"
             IsJumpEnabled="True"
             MaxPageCount="{Binding PageCount}"
-            PageIndex="1" />
+            MaxPageInterval="4"
+            PageIndex="{Binding PageIndex}">
+            <hc:Interaction.Triggers>
+                <hc:EventTrigger EventName="PageUpdated">
+                    <hc:EventToCommand Command="{Binding PageUpdatedCommand}" PassEventArgsToCommand="True" />
+                </hc:EventTrigger>
+            </hc:Interaction.Triggers>
+        </hc:Pagination>
     </Grid>
 </UserControl>
