--- a/RD3/Views/CalibrateView.xaml
+++ b/RD3/Views/CalibrateView.xaml
@@ -7,7 +7,9 @@
     xmlns:local="clr-namespace:RD3.Views"
     xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    d:DesignHeight="680"
+             xmlns:viewmodels="clr-namespace:RD3.ViewModels"
+             d:DataContext="{d:DesignInstance Type=viewmodels:CalibrateViewModel}"
+             d:DesignHeight="680"
     d:DesignWidth="900"
     Background="{StaticResource BackGroundBrush}"
     TextElement.FontFamily="{StaticResource ENGFontFamily}"
