--- a/RD3/Views/OperationView.xaml
+++ b/RD3/Views/OperationView.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-    x:Class="RD3.Views.AlarmView"
+    x:Class="RD3.Views.OperationView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -10,7 +10,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:prism="http://prismlibrary.com/"
     xmlns:viewmodels="clr-namespace:RD3.ViewModels"
-    d:DataContext="{d:DesignInstance Type=viewmodels:AlarmViewModel}"
+    d:DataContext="{d:DesignInstance Type=viewmodels:OperationViewModel}"
     d:DesignHeight="700"
     d:DesignWidth="1350"
     Background="{StaticResource BackGroundBrush}"
@@ -28,7 +28,7 @@
             <RowDefinition Height="*" />
             <RowDefinition Height="40" />
         </Grid.RowDefinitions>
-        <TextBlock FontSize="40" Text="{ex:Language Key='Alarm Record'}" />
+        <TextBlock FontSize="40" Text="{ex:Language Key='Operation Record'}" />
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="auto" />
@@ -97,7 +97,7 @@
             FontSize="14"
             HeadersVisibility="All"
             IsReadOnly="True"
-            ItemsSource="{Binding AlarmRecordCol}"
+            ItemsSource="{Binding OperationCol}"
             RowHeaderWidth="60"
             ScrollViewer.HorizontalScrollBarVisibility="Auto"
             ScrollViewer.VerticalScrollBarVisibility="Auto">
@@ -105,11 +105,11 @@
                 <DataGridTemplateColumn
                     Width="200"
                     CellStyle="{StaticResource DataGridTextLeftCellStyle}"
-                    Header="{ex:Language Key='Alarm Time'}"
+                    Header="{ex:Language Key='Occurrence Time'}"
                     HeaderStyle="{StaticResource DataGridLeftColumnHeaderStyle}">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <TextBlock Text="{Binding Time, StringFormat={}{0:yyyy-MM-dd HH:mm:ss}}" />
+                            <TextBlock Text="{Binding OccurrenceTime, StringFormat={}{0:yyyy-MM-dd HH:mm:ss}}" />
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
@@ -127,15 +127,15 @@
                     HeaderStyle="{StaticResource DataGridCenterColumnHeaderStyle}" />
                 <DataGridTextColumn
                     Width="100"
-                    Binding="{Binding Value}"
+                    Binding="{Binding Module}"
                     CellStyle="{StaticResource DataGridTextCenterCellStyle}"
                     Header="{ex:Language Key='Value'}"
                     HeaderStyle="{StaticResource DataGridCenterColumnHeaderStyle}" />
                 <DataGridTextColumn
-                    Width="80"
-                    Binding="{Binding Grade}"
+                    Width="250"
+                    Binding="{Binding OperationStatement}"
                     CellStyle="{StaticResource DataGridTextCenterCellStyle}"
-                    Header="{ex:Language Key='Grade'}"
+                    Header="{ex:Language Key='Operation'}"
                     HeaderStyle="{StaticResource DataGridCenterColumnHeaderStyle}" />
                 <DataGridTextColumn
                     Width="250"
