--- a/RD3/Views/SampleView.xaml
+++ b/RD3/Views/SampleView.xaml
@@ -9,6 +9,8 @@
     xmlns:local="clr-namespace:RD3.Views"
     xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:viewmodels="clr-namespace:RD3.ViewModels"
+    d:DataContext="{d:DesignInstance Type=viewmodels:SampleViewModel}"
     d:DesignHeight="700"
     d:DesignWidth="1350"
     Background="{StaticResource BackGroundBrush}"
@@ -43,9 +45,13 @@
                 Margin="5"
                 HorizontalAlignment="Left"
                 hc:InfoElement.ShowClearButton="True"
-                Command="{Binding SearchCmd}"
-                CommandParameter="{Binding Text, RelativeSource={RelativeSource Self}}"
-                IsRealTime="True" />
+                IsRealTime="True">
+                <hc:Interaction.Triggers>
+                    <hc:EventTrigger EventName="SearchStarted">
+                        <hc:EventToCommand Command="{Binding SearchCommand}" PassEventArgsToCommand="True" />
+                    </hc:EventTrigger>
+                </hc:Interaction.Triggers>
+            </hc:SearchBar>
             <Button
                 Grid.Column="1"
                 Height="30"
@@ -64,6 +70,7 @@
                 hc:IconElement.Geometry="{StaticResource GeometryAddLog}"
                 Background="{StaticResource ButtonBoderBrush}"
                 BorderBrush="{StaticResource ButtonBoderBrush}"
+                Command="{Binding AddSampleCommand}"
                 Content="{ex:Language Key='Log'}"
                 FontSize="14"
                 Foreground="White" />
@@ -74,6 +81,8 @@
                 HorizontalContentAlignment="Center"
                 hc:BorderElement.CornerRadius="{StaticResource DefaultCornerRadius}"
                 hc:IconElement.Geometry="{StaticResource GeometryCompare}"
+                Command="{Binding CompareCommand}"
+                CommandParameter="{Binding ElementName=dataGrid, Path=SelectedItem}"
                 Content="{ex:Language Key='Compare'}"
                 FontSize="14" />
             <Button
@@ -83,6 +92,8 @@
                 HorizontalContentAlignment="Center"
                 hc:BorderElement.CornerRadius="{StaticResource DefaultCornerRadius}"
                 hc:IconElement.Geometry="{StaticResource GeometryExport}"
+                Command="{Binding ExportCommand}"
+                CommandParameter="{Binding ElementName=dataGrid, Path=SelectedItem}"
                 Content="{ex:Language Key='Export'}"
                 FontSize="14" />
             <Button
@@ -92,57 +103,71 @@
                 HorizontalContentAlignment="Center"
                 hc:BorderElement.CornerRadius="{StaticResource DefaultCornerRadius}"
                 hc:IconElement.Geometry="{StaticResource GeometryDelete}"
+                Command="{Binding DeleteCommand}"
+                CommandParameter="{Binding ElementName=dataGrid, Path=SelectedItem}"
                 FontSize="14"
                 Foreground="Red" />
         </Grid>
         <DataGrid
+            Name="dataGrid"
             Grid.Row="2"
             AutoGenerateColumns="False"
             Background="Transparent"
             FontSize="16"
             HeadersVisibility="All"
-            ItemsSource="{Binding SampleRecordCol}"
+            ItemsSource="{Binding SampleCol}"
             RowHeaderWidth="50"
             ScrollViewer.HorizontalScrollBarVisibility="Auto"
             ScrollViewer.VerticalScrollBarVisibility="Auto">
+            <i:Interaction.Triggers>
+                <i:EventTrigger EventName="MouseDoubleClick">
+                    <i:InvokeCommandAction Command="{Binding EditCommand}" CommandParameter="{Binding ElementName=dataGrid, Path=SelectedItem}" />
+                </i:EventTrigger>
+            </i:Interaction.Triggers>
             <DataGrid.Columns>
-                <DataGridTextColumn Width="50" Header="{ex:Language Key='ID'}" />
-                <DataGridTextColumn Width="100" Header="{ex:Language Key='Batch'}" />
-                <DataGridTextColumn Width="200" Header="{ex:Language Key='Reactor'}" />
+                <DataGridTextColumn
+                    Width="50"
+                    Binding="{Binding Id}"
+                    Header="{ex:Language Key='ID'}" />
+                <DataGridTextColumn
+                    Width="150"
+                    Binding="{Binding Batch}"
+                    Header="{ex:Language Key='Batch'}" />
+                <DataGridTextColumn
+                    Width="150"
+                    Binding="{Binding Reactor}"
+                    Header="{ex:Language Key='Reactor'}" />
                 <DataGridTextColumn Width="100" Header="{ex:Language Key='Type'}" />
                 <DataGridTemplateColumn Width="200" Header="{ex:Language Key='Sampling time'}">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <TextBlock Text="{Binding Date, StringFormat={}{0:yyyy-MM-dd HH:mm:ss}}" />
+                            <TextBlock Text="{Binding SampleTime, StringFormat={}{0:yyyy-MM-dd HH:mm:ss}}" />
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
-                <DataGridTextColumn Width="150" Header="{ex:Language Key='Main parameter'}" />
-                <DataGridTextColumn Width="120" Header="{ex:Language Key='Value'}" />
-                <DataGridTextColumn Width="120" Header="{ex:Language Key='Remark'}" />
+                <DataGridTextColumn
+                    Width="100"
+                    Binding="{Binding MainParam}"
+                    Header="{ex:Language Key='Main parameter'}" />
+                <DataGridTextColumn
+                    Width="120"
+                    Binding="{Binding Value}"
+                    Header="{ex:Language Key='Value'}" />
+                <DataGridTextColumn
+                    Width="120"
+                    Binding="{Binding Remark}"
+                    Header="{ex:Language Key='Remark'}" />
                 <DataGridTemplateColumn Width="200" Header="{ex:Language Key='Operation'}">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <StackPanel>
+                            <hc:UniformSpacingPanel Orientation="Horizontal" Spacing="5">
                                 <Button
                                     HorizontalAlignment="Left"
-                                    hc:IconElement.Geometry="{StaticResource GeometryUserInfo}"
+                                    hc:IconElement.Geometry="{StaticResource GeometryEdit}"
                                     Background="Transparent"
                                     BorderThickness="0"
-                                    Content="Account manage" />
-                                <Button
-                                    HorizontalAlignment="Left"
-                                    hc:IconElement.Geometry="{StaticResource GeometrySwitchUser}"
-                                    Background="Transparent"
-                                    BorderThickness="0"
-                                    Content="Switch Account" />
-                                <Button
-                                    HorizontalAlignment="Left"
-                                    hc:IconElement.Geometry="{StaticResource GeometryLogOut}"
-                                    Background="Transparent"
-                                    BorderThickness="0"
-                                    Content="Log out" />
-                            </StackPanel>
+                                    Click="ButtonEdit_Click" />
+                            </hc:UniformSpacingPanel>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
@@ -152,9 +177,17 @@
             Grid.Row="3"
             HorizontalAlignment="Right"
             VerticalAlignment="Center"
+            Background="Transparent"
+            DataCountPerPage="{Binding DataCountPerPage}"
             IsJumpEnabled="True"
-            MaxPageCount="10"
+            MaxPageCount="{Binding PageCount}"
             MaxPageInterval="4"
-            PageIndex="1" />
+            PageIndex="{Binding PageIndex}">
+            <hc:Interaction.Triggers>
+                <hc:EventTrigger EventName="PageUpdated">
+                    <hc:EventToCommand Command="{Binding PageUpdatedCommand}" PassEventArgsToCommand="True" />
+                </hc:EventTrigger>
+            </hc:Interaction.Triggers>
+        </hc:Pagination>
     </Grid>
 </UserControl>
