--- a/RD3/Views/EditProjectView.xaml
+++ b/RD3/Views/EditProjectView.xaml
@@ -98,11 +98,11 @@
                     HorizontalAlignment="Right"
                     HorizontalContentAlignment="Center"
                     hc:BorderElement.CornerRadius="{StaticResource DefaultCornerRadius}"
-                    BorderBrush="{StaticResource ButtonBoderBrush}"
+                    BorderBrush="{StaticResource PrimaryBrush}"
                     Command="{Binding CancelCommand}"
                     Content="{ex:Language Key='Cancel'}"
                     FontSize="14"
-                    Foreground="{StaticResource ButtonBoderBrush}" />
+                    Foreground="{StaticResource PrimaryBrush}" />
                 <Button
                     Width="80"
                     Height="30"
@@ -110,8 +110,8 @@
                     HorizontalAlignment="Right"
                     HorizontalContentAlignment="Center"
                     hc:BorderElement.CornerRadius="{StaticResource DefaultCornerRadius}"
-                    Background="{StaticResource ButtonBoderBrush}"
-                    BorderBrush="{StaticResource ButtonBoderBrush}"
+                    Background="{StaticResource PrimaryBrush}"
+                    BorderBrush="{StaticResource PrimaryBrush}"
                     Command="{Binding OKCommand}"
                     Content="{ex:Language Key='OK'}"
                     FontSize="14"
