--- a/RD3/Views/ProjectView.xaml
+++ b/RD3/Views/ProjectView.xaml
@@ -67,8 +67,8 @@
                 HorizontalContentAlignment="Center"
                 hc:BorderElement.CornerRadius="{StaticResource DefaultCornerRadius}"
                 hc:IconElement.Geometry="{StaticResource GeometryAdd}"
-                Background="{StaticResource ButtonBoderBrush}"
-                BorderBrush="{StaticResource ButtonBoderBrush}"
+                Background="{StaticResource PrimaryBrush}"
+                BorderBrush="{StaticResource PrimaryBrush}"
                 Command="{Binding AddProjectCommand}"
                 Content="{ex:Language Key='Create'}"
                 FontSize="14"
