--- a/RD3/Views/SampleView.xaml
+++ b/RD3/Views/SampleView.xaml
@@ -68,8 +68,8 @@
                 HorizontalContentAlignment="Center"
                 hc:BorderElement.CornerRadius="{StaticResource DefaultCornerRadius}"
                 hc:IconElement.Geometry="{StaticResource GeometryAddLog}"
-                Background="{StaticResource ButtonBoderBrush}"
-                BorderBrush="{StaticResource ButtonBoderBrush}"
+                Background="{StaticResource PrimaryBrush}"
+                BorderBrush="{StaticResource PrimaryBrush}"
                 Command="{Binding AddSampleCommand}"
                 Content="{ex:Language Key='Log'}"
                 FontSize="14"
