--- a/RD3/Lang/Lang.en-US.xaml
+++ b/RD3/Lang/Lang.en-US.xaml
@@ -3,6 +3,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:system="clr-namespace:System;assembly=mscorlib">
     <system:String x:Key="Home">Home</system:String>
+    <system:String x:Key="Main">Main</system:String>
     <system:String x:Key="Project">Project</system:String>
     <system:String x:Key="Data">Data</system:String>
     <system:String x:Key="Calibrate">Calibrate</system:String>
@@ -90,4 +91,11 @@
     <system:String x:Key="Alarm Time">Alarm Time</system:String>
     <system:String x:Key="Value">Value</system:String>
     <system:String x:Key="Grade">Grade</system:String>
+    <system:String x:Key="pH">pH</system:String>
+    <system:String x:Key="Air">Air</system:String>
+    <system:String x:Key="CO2">CO2</system:String>
+    <system:String x:Key="O2">O2</system:String>
+    <system:String x:Key="N2">N2</system:String>
+    <system:String x:Key="Agit">Agit</system:String>
+    <system:String x:Key="DO">DO</system:String>
 </ResourceDictionary>
