--- a/RD3/Lang/Lang.zh-CN.xaml
+++ b/RD3/Lang/Lang.zh-CN.xaml
@@ -2,7 +2,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:system="clr-namespace:System;assembly=mscorlib">
-    <system:String x:Key="Home">主页</system:String>
+    <system:String x:Key="Main">主页</system:String>
     <system:String x:Key="Project">项目</system:String>
     <system:String x:Key="Data">数据</system:String>
     <system:String x:Key="Calibrate">校准标定</system:String>
@@ -90,4 +90,11 @@
     <system:String x:Key="Alarm Time">报警时间</system:String>
     <system:String x:Key="Value">数值</system:String>
     <system:String x:Key="Grade">等级</system:String>
+    <system:String x:Key="pH">pH</system:String>
+    <system:String x:Key="Air">空气</system:String>
+    <system:String x:Key="CO2">二氧化碳</system:String>
+    <system:String x:Key="O2">氧气</system:String>
+    <system:String x:Key="N2">氮气</system:String>
+    <system:String x:Key="Agit">转速</system:String>
+    <system:String x:Key="DO">溶氧</system:String>
 </ResourceDictionary>
