--- a/RD3/Views/BatchView.xaml
+++ b/RD3/Views/BatchView.xaml
@@ -72,8 +72,8 @@
                 HorizontalContentAlignment="Center"
                 hc:BorderElement.CornerRadius="{StaticResource DefaultCornerRadius}"
                 hc:IconElement.Geometry="{StaticResource GeometryAdd}"
-                Background="{StaticResource ButtonBoderBrush}"
-                BorderBrush="{StaticResource ButtonBoderBrush}"
+                Background="{StaticResource PrimaryBrush}"
+                BorderBrush="{StaticResource PrimaryBrush}"
                 Command="{Binding AddBatchCommand}"
                 Content="{ex:Language Key='Create'}"
                 FontSize="14"
