--- a/RD3/Views/EditScaleView.xaml
+++ b/RD3/Views/EditScaleView.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-    x:Class="RD3.Views.EditBatchView"
+    x:Class="RD3.Views.EditScaleView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -14,7 +14,7 @@
     xmlns:sys="clr-namespace:System;assembly=mscorlib"
     xmlns:viewmodels="clr-namespace:RD3.ViewModels"
     Width="220"
-    Height="500"
+    Height="150"
     d:DataContext="{d:DesignInstance Type=viewmodels:EditBatchViewModel}"
     Background="{StaticResource BackGroundBrush}"
     mc:Ignorable="d">
@@ -45,70 +45,20 @@
                 <RowDefinition Height="*" />
                 <RowDefinition Height="auto" />
             </Grid.RowDefinitions>
-            <hc:UniformSpacingPanel Orientation="Vertical" Spacing="10">
-                <TextBox
-                    Width="200"
-                    VerticalAlignment="Center"
-                    hc:InfoElement.Title="{ex:Language Key='Id'}"
-                    IsEnabled="False"
-                    Style="{StaticResource TextBoxExtend}"
-                    Text="{Binding Batch.Id}" />
-                <TextBox
-                    Width="200"
-                    VerticalAlignment="Center"
-                    hc:InfoElement.Title="{ex:Language Key='Name'}"
-                    IsEnabled="{Binding Enable}"
-                    Style="{StaticResource TextBoxExtend}"
-                    Text="{Binding Batch.Name}" />
-                <hc:CheckComboBox
-                    Name="cmbReactor"
-                    MaxWidth="200"
-                    MaxHeight="60"
-                    hc:InfoElement.ShowClearButton="True"
-                    hc:InfoElement.Title="{ex:Language Key='Reactor'}"
-                    IsEnabled="{Binding Enable}"
-                    ItemsSource="{Binding ReactorList}"
-                    ShowSelectAllButton="True"
-                    Style="{StaticResource CheckComboBoxPlus}" />
-                <hc:DateTimePicker
-                    Width="200"
-                    hc:InfoElement.ShowClearButton="True"
-                    hc:InfoElement.Title="{ex:Language Key='Start time'}"
-                    IsEnabled="{Binding Enable}"
-                    Style="{StaticResource DateTimePickerPlus}"
-                    Text="{Binding Batch.StartTime}" />
-                <hc:DateTimePicker
-                    Width="200"
-                    hc:InfoElement.ShowClearButton="True"
-                    hc:InfoElement.Title="{ex:Language Key='End time'}"
-                    IsEnabled="{Binding Enable}"
-                    Style="{StaticResource DateTimePickerPlus}"
-                    Text="{Binding Batch.EndTime}" />
-                <hc:ComboBox
-                    Width="200"
-                    VerticalAlignment="Center"
-                    hc:BorderElement.CornerRadius="4"
-                    hc:InfoElement.Title="{ex:Language Key='Project'}"
-                    IsEnabled="{Binding Enable}"
-                    ItemsSource="{Binding ProjectList}"
-                    SelectedItem="{Binding Project}">
-                    <ComboBox.ItemTemplate>
-                        <DataTemplate>
-                            <TextBlock Text="{Binding Name}" />
-                        </DataTemplate>
-                    </ComboBox.ItemTemplate>
-                </hc:ComboBox>
-                <TextBox
-                    Width="200"
-                    Height="80"
-                    VerticalAlignment="Center"
-                    hc:InfoElement.Title="{ex:Language Key='Description'}"
-                    AcceptsReturn="True"
-                    IsEnabled="{Binding Enable}"
-                    Style="{StaticResource TextBoxExtend}"
-                    Text="{Binding Batch.Description}"
-                    TextWrapping="Wrap"
-                    VerticalScrollBarVisibility="Auto" />
+            <hc:UniformSpacingPanel Orientation="Vertical"
+                                    Spacing="10">
+                <TextBox Width="200"
+                         VerticalAlignment="Center"
+                         hc:InfoElement.Title="{ex:Language Key='Min Value'}"
+                         IsEnabled="{Binding Enable}"
+                         Style="{StaticResource TextBoxExtend}"
+                         Text="{Binding Batch.Name}" />
+                <TextBox Width="200"
+                         VerticalAlignment="Center"
+                         hc:InfoElement.Title="{ex:Language Key='Max Value'}"
+                         IsEnabled="{Binding Enable}"
+                         Style="{StaticResource TextBoxExtend}"
+                         Text="{Binding Batch.Name}" />
             </hc:UniformSpacingPanel>
             <StackPanel
                 Grid.Row="5"
