--- a/RD3/Views/MainView.xaml
+++ b/RD3/Views/MainView.xaml
@@ -35,10 +35,11 @@
             Identifier="Root">
             <Grid>
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="150" />
+                    <ColumnDefinition Width="140" />
                     <ColumnDefinition Width="*" />
                 </Grid.ColumnDefinitions>
                 <Border
+                    Margin="0,0,20,0"
                     BorderBrush="LightGray"
                     BorderThickness="1"
                     Effect="{StaticResource EffectShadow2}">
@@ -90,7 +91,7 @@
                                         Width="24"
                                         Height="24"
                                         Margin="0,-5,-15,0"
-                                        Source="/Images/Home.png" />
+                                        Source="/Images/Main.png" />
                                 </hc:SideMenuItem.Icon>
                             </hc:SideMenuItem>
                             <hc:SideMenuItem
